# pika3

./: Bench.pk  Cargo.toml  Demo.pk  demo.pk
editors/code/src/: extension.ts
editors/code/syntaxes/: md_injection.json  pika.tmLanguage.json
sketches/: borrows.pk
src/: common.rs  elab.rs  lexer.rs  lib.rs  main.rs  parser.rs  pretty.rs  query.rs  server.rs
src/elab/: pattern.rs  term.rs
src/vm/: mod.rs
tests/: Demo.pk  DemoErr.pk  LocalDef.pk  Regions.pk  SumType.pk  runner.rs
tests/Multifile/: One.pk  Two.pk
