[package]
name = "pika3"
version = "0.1.0"
edition = "2021"

[dependencies]
ariadne = "0.4.1"
educe = "0.6.0"
im = "15.1.0"
im-rope = "*"
lsp-server = "0.7.7"
lsp-types = "0.95.1"
serde = "1.0.210"
serde_json = "1.0.128"
stacker = "0.1.17"
tap = "1.0.1"
yansi = "*"

[dependencies.smallvec]
version = "*"
features = ["union"]

[features]
segmented-stack = []

# for profiling
[profile.release]
debug = true
